[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemap/wall_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://tilemap/floor_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://world.gd" type="Script" id=4]
[ext_resource path="res://bg.png" type="Texture" id=5]
[ext_resource path="res://tilemap/prop_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://effects/tile_highlight.png" type="Texture" id=7]
[ext_resource path="res://effects/tile_highlight_wall.png" type="Texture" id=8]
[ext_resource path="res://inventory/inventory.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/ui.gd" type="Script" id=10]
[ext_resource path="res://inventory/item_drop.tscn" type="PackedScene" id=11]
[ext_resource path="res://inventory/hotbar.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/rainyhearts.ttf" type="DynamicFontData" id=13]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 13 )

[node name="world" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -17559, -16027 )
scale = Vector2( 24.439, 20.1201 )
texture = ExtResource( 5 )
offset = Vector2( 1000, 1000 )

[node name="floor_tiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131072, 14, 0, 131073, 14, 0, 131074, 14, 0, 131075, 14, 0, 131076, 14, 0, 131077, 14, 0, 196610, 14, 0, 196611, 14, 0 )

[node name="highlight" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.5, 0.5 )
z_index = 100
texture = ExtResource( 7 )

[node name="highlight_wall" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
scale = Vector2( 0.5, 0.5 )
z_index = 100
texture = ExtResource( 8 )
offset = Vector2( 0, -16 )

[node name="y_sort" type="YSort" parent="."]

[node name="item_drop" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4124, 4091 )

[node name="item_drop2" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4120, 4070 )

[node name="item_drop3" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4139, 4075 )

[node name="item_drop4" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4097, 4062 )

[node name="item_drop5" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4123, 4050 )

[node name="item_drop6" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4142, 4058 )

[node name="item_drop7" parent="y_sort" instance=ExtResource( 11 )]
position = Vector2( 4104, 4053 )

[node name="prop_tiles" type="TileMap" parent="y_sort"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 3
format = 1

[node name="player" parent="y_sort" instance=ExtResource( 1 )]
position = Vector2( 4096, 4096 )
collision_layer = 15

[node name="wide" type="Camera2D" parent="y_sort/player"]
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 25.0

[node name="close" type="Camera2D" parent="y_sort/player"]
current = true
zoom = Vector2( 0.18, 0.18 )
smoothing_enabled = true
smoothing_speed = 25.0

[node name="wall_tiles" type="TileMap" parent="y_sort"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 9
format = 1
tile_data = PoolIntArray( -458745, 11, 458757, -262137, 11, 2, -196601, 11, 65538, -131065, 11, 65538, -65529, 11, 65538, 7, 11, 65538, 65543, 11, 65539, 131079, 11, 131074 )

[node name="canvas_modulate" type="CanvasModulate" parent="."]
color = Color( 0.32, 0.32, 0.32, 1 )

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="global_pos" type="Label" parent="ui"]
margin_left = 7.0
margin_top = 997.0
margin_right = 212.0
margin_bottom = 1039.0
custom_fonts/font = SubResource( 3 )
text = "pos: 256, 256 | tile pos: 256, 256"
valign = 2

[node name="chunk_pos" type="Label" parent="ui"]
margin_left = 7.0
margin_top = 1033.0
margin_right = 471.0
margin_bottom = 1075.0
custom_fonts/font = SubResource( 3 )
text = "chunk: 256, 256 | chunk pos: 256, 256"
valign = 2

[node name="inventory" parent="ui" instance=ExtResource( 9 )]
visible = false
position = Vector2( 554, 718 )

[node name="hotbar" parent="ui" instance=ExtResource( 12 )]
position = Vector2( 938, 1080 )
